# HarTex

./: .codespellrc  .env.example  .gitignore  .gitmodules  .tokeignore  .whitesource  Buildfile.example  CHANGELOG.md  CODE_OF_CONDUCT  CONTRIBUTING.md  Cargo.toml  CommonEnv.vars.example  Env.example.vars  HarTexfile  Hartexfile  README.md  RELEASES.md  SECURITY.md  bors.toml  build.buildsystem.kts  buildconf.toml.example  buildsystem.ps1  buildsystem.sh  clippy.toml  env.example.vars  hartex.example.conf  rustfmt.toml  x.py
base/: Cargo.toml
base/src/: cmdline.rs  discord.rs  error.rs  events.rs  lib.rs  logging.rs  panicking.rs  time.rs
bootstrap/: Cargo.toml  __init__.py  bootstrap.py  bootstrap_configure.py  bootstrap_help.py  bootstrap_make.py  builder.py  cmdrunner.py
bootstrap/config/: vscode-settings.json
bootstrap/profiles/: hartex.api.conf  hartex.hosting.conf  hartex.localization.conf
bootstrap/src/: build.rs  builder.rs  lib.rs
cmdsys/: Cargo.toml
cmdsys/src/: command.rs  context.rs  framework.rs  lib.rs
conftoml/: Cargo.toml
conftoml/src/: dashacc.rs  lib.rs  nightly.rs
database-queries/: Cargo.toml  build.rs  schema.sql
database-queries/.cargo/: config
database-queries/queries/: start-timestamp-select-by-component.sql  start-timestamp-upsert.sql  start_timestamp_select_by_component.sql  start_timestamp_upsert.sql
database-queries/src/: lib.rs
database-queries/start-timestamp/: insert-into-on-conflict-update.sql  select-by-component.sql
dbmani/: Cargo.toml
dbmani/src/: lib.rs
discord-frontend/: Cargo.toml  rustfmt.toml
discord-frontend/.cargo/: config
discord-frontend/.config/: nextest.toml
discord-frontend/base/: Cargo.toml
discord-frontend/env/: Cargo.toml  build.rs
discord-frontend/event/: Cargo.toml
discord-frontend/ext/: Cargo.toml
discord-frontend/gateway/: Cargo.toml
discord-frontend/hartex-core/: Cargo.toml
discord-frontend/hartex-discord-api/: Cargo.toml
discord-frontend/hartex-discord-cdn/: Cargo.toml
discord-frontend/hartex-discord-commands/: Cargo.toml
discord-frontend/hartex-discord-commands-core/: Cargo.toml
discord-frontend/hartex-discord-commands-macros/: Cargo.toml
discord-frontend/hartex-discord-commands-manager/: Cargo.toml
discord-frontend/hartex-discord-commands-spec/: smoke-test.json
discord-frontend/hartex-discord-commands-test/: Cargo.toml  build.rs
discord-frontend/hartex-discord-configuration-librune/: Cargo.toml
discord-frontend/hartex-discord-configuration-luart/: Cargo.toml
discord-frontend/hartex-discord-configuration-manifest/: Cargo.toml
discord-frontend/hartex-discord-configuration-models/: Cargo.toml
discord-frontend/hartex-discord-configuration-provider/: Cargo.toml
discord-frontend/hartex-discord-configuration-runecli/: Cargo.toml
discord-frontend/hartex-discord-configuration-sample/: configuration.hcl  configuration.lua  configuration.rn
discord-frontend/hartex-discord-configuration-test/: Cargo.toml
discord-frontend/hartex-discord-core/: Cargo.toml
discord-frontend/hartex-discord-entitycache/: Cargo.toml
discord-frontend/hartex-discord-entitycache-cacheupdaters/: Cargo.toml
discord-frontend/hartex-discord-entitycache-core/: Cargo.toml
discord-frontend/hartex-discord-entitycache-entities/: Cargo.toml
discord-frontend/hartex-discord-entitycache-macros/: Cargo.toml  build.rs
discord-frontend/hartex-discord-entitycache-repositories/: Cargo.toml
discord-frontend/hartex-discord-entitycache-service/: Cargo.toml
discord-frontend/hartex-discord-entitycache-test/: Cargo.toml
discord-frontend/hartex-discord-eyre/: Cargo.toml
discord-frontend/hartex-discord-interaction-manager/: Cargo.toml
discord-frontend/hartex-discord-internal-events/: Cargo.toml
discord-frontend/hartex-discord-kafka/: Cargo.toml
discord-frontend/hartex-discord-leader/: Cargo.toml
discord-frontend/hartex-discord-rest/: Cargo.toml
discord-frontend/hartex-discord-worker/: Cargo.toml
discord-frontend/hartex-eyre/: Cargo.toml
discord-frontend/hartex-gateway/: Cargo.toml
discord-frontend/hartex-leader/: Cargo.toml
discord-frontend/interactions/: Cargo.toml
discord-frontend/loadbal/: Cargo.toml  build.rs
discord-frontend/manidb/: Cargo.toml
discord-frontend/model/: Cargo.toml
discord-frontend/rest/: Cargo.toml
discord-frontend/restreq/: Cargo.toml
discord-frontend/stacktrace/: Cargo.toml
driver/: Cargo.toml
driver/src/: commands.rs  ctrlc.rs  events.rs  fw_setup.rs  handler.rs  interactions.rs  lib.rs  pre_startup.rs
env/: Cargo.toml  build.rs
env/src/: lib.rs
event/: Cargo.toml
event/src/: guild_create.rs  identify.rs  main.rs  ping.rs  ready.rs
eventsys/: Cargo.toml
eventsys/src/: emitter.rs  events.rs  lib.rs  listener.rs
ext/: Cargo.toml
ext/src/: lib.rs
gateway/: Cargo.toml
gateway/lib/: event.rs  lib.rs
gateway/src/: main.rs  request.rs
hartex/: Cargo.toml
hartex-kafka/: Cargo.toml
hartex-kafka/src/: blockvec.rs  lib.rs
hartex/src/: main.rs
hartex_cmdsys/: Cargo.toml
hartex_cmdsys/src/: command.rs  context.rs  framework.rs  lib.rs
hartex_confdsl/: Cargo.toml
hartex_confdsl/src/: error.rs  lib.rs
hartex_conftoml/: Cargo.toml
hartex_conftoml/src/: dashacc.rs  guildconf.rs  lib.rs  nightly.rs
hartex_core/: Cargo.toml
hartex_core/src/: ansi.rs  discord.rs  error.rs  events.rs  lib.rs  logging.rs  time.rs
hartex_dbmani/: Cargo.toml
hartex_dbmani/src/: guildconf.rs  guildconfs.rs  lib.rs  whitelist.rs
hartex_driver/: Cargo.toml
hartex_driver/src/: commands.rs  ctrlc.rs  env_setup.rs  events.rs  fw_setup.rs  handler.rs  interactions.rs  lib.rs  pre_startup.rs
hartex_env/: Cargo.toml
hartex_env/src/: lib.rs
hartex_eventsys/: Cargo.toml
hartex_eventsys/src/: emitter.rs  events.rs  lib.rs  listener.rs
hartex_locale/: Cargo.toml
hartex_locale/src/: lib.rs
hartex_logging/: Cargo.toml
hartex_logging/src/: level.rs  lib.rs
hartex_model/: Cargo.toml
hartex_model/src/: env.rs  lib.rs  (+2 more)
hartex_plugin_localize/: Cargo.toml
hartex_plugins/: Cargo.toml
hartex_utils/: Cargo.toml
(+1699 files in other folders)
