[package]
name = "hartex_rewrite"
version = "1.17.0-21w08a.1"
description = "HarTex Rewrite Discord Bot in Rust, as a replacement for the C# version."
edition = "2018"
authors = ["The HarTex Project Developers"]
license = "Apache-2.0"

# Third Party Crates

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
compound_duration = "1.2.0"
csv = "1.1.5"
ctrlc = "3.1.7"
dashmap = "4.0.2"
dotenv = "0.15.0"
funty = "=1.1.0"
futures-channel = "0.3.12"
futures-util = "0.3.12"
hyper = { version = "0.14.4", features = ["client", "http2", "runtime"] }
hyper-tls = "0.5.0"
image = { version = "0.23.13", features = ["png", "gif"] }
imageproc = "0.22.0"
lexical-core = "0.7.5"
num = "0.3.1"
pad = "0.1.6"
quick-xml = { version = "0.21.0", features = [ "serialize" ] }
rand = "0.8.3"
regex = "1.4.3"
rusttype = "0.9.2"
serde = "1.0.123"
serde_derive = "1.0.123"
sha3 = "0.9.1"
sqlx = { version = "0.5.1", default-features = false, features = [ "postgres", "runtime-tokio-native-tls" ] }
sysinfo = "0.16.4"
tokio = { version = "1.2.0", features = [ "full" ] }
tokio-stream = "0.1.3"
twilight-cache-inmemory = "0.3.1"
twilight-embed-builder = "0.3.0"
twilight-gateway = "0.3.2"
twilight-gateway-queue = "0.3.0"
twilight-http = "0.3.4"
twilight-mention = "0.3.0"
twilight-model = "0.3.2"
twilight-standby = "0.3.0"
twilight-util = { version = "0.3.0", features = [ "snowflake" ] }
unicase = "2.6.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
