[package]
name = "hartex_rewrite"
version = "1.17.1-21w14a.2"
description = "HarTex Rewrite Discord Bot in Rust, as a replacement for the C# version."
edition = "2018"
authors = ["The HarTex Project Developers"]
license = "Apache-2.0"

# Third Party Crates

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
compound_duration = "1.2.0"
csv = "1.1.6"
ctrlc = "3.1.8"
dashmap = "4.0.2"
dotenv = "0.15.0"
funty = "=1.1.0"
futures-channel = "0.3.14"
futures-util = "0.3.14"
hyper = { version = "0.14.5", features = ["client", "http2", "runtime"] }
hyper-tls = "0.5.0"
image = { version = "0.23.14", features = ["png", "gif"] }
imageproc = "0.22.0"
itertools = "0.10.0"
lexical-core = "0.7.5"
num = "0.3.1"
pad = "0.1.6"
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
rand = "0.8.3"
regex = "1.4.5"
rusttype = "0.9.2"
serde = "1.0.125"
serde_derive = "1.0.125"
sha3 = "0.9.1"
sqlx = { version = "0.5.1", default-features = false, features = [ "postgres", "runtime-tokio-native-tls" ] }
sysinfo = "0.16.5"
tokio = { version = "1.4.0", features = [ "full" ] }
tokio-stream = "0.1.5"
twilight-cache-inmemory = "0.3.4"
twilight-embed-builder = "0.3.0"
twilight-gateway = "0.3.4"
twilight-gateway-queue = "0.3.0"
twilight-http = "0.3.6"
twilight-mention = "0.3.0"
twilight-model = "0.3.4"
twilight-standby = "0.3.0"
twilight-util = { version = "0.3.0", features = [ "snowflake" ] }
unicase = "2.6.0"
url = "2.2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 1
