[workspace]
members = [
    "hartex",
    "cache/base",
    "cache/discord",
    "cmdsys",
    "conftoml",
    "base",
    "dbmani",
    "driver",
    "env",
    "eventsys",
    "localization/impl",
    "localization/locale",
    "model",
    "plugins",
    "utils"
]

[profile.release]
opt-level = "s"
