[package]
name = "base"
version = "0.1.0"
edition = "2021"
description = """
The base library of the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
hyper = { version = "0.14.16", default-features = false }
log = { version = "0.4.14", optional = true }
log4rs = { version = "1.0.0", default-features = false, features = ["console_appender"], optional = true }
serde_json = "1.0.78"
twilight-gateway = { version = "0.9.0", optional = true }
twilight-model = { version = "0.9.0", optional = true }

[features]
discord-gateway = ["twilight-gateway"]
discord-model = ["twilight-model"]
logging = ["log", "log4rs"]
