[package]
name = "base"
version = "0.1.0"
edition = "2021"
description = """
The base library of the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.1", default-features = false, optional = true }
getopts = { version = "0.2.21", optional = true }
http = "0.2.7"
hyper = { version = "0.14.19", default-features = false }
log = { version = "0.4.14", optional = true }
log4rs = { version = "1.1.1", default-features = false, features = ["console_appender"], optional = true }
owo-colors = { version = "3.4.0", optional = true }
serde_json = "1.0.81"
sqlx = "0.5.13"
twilight-gateway = { version = "0.11.1", optional = true }
twilight-model = { version = "0.11.1", optional = true }

[features]
cmdline = ["getopts"]
discord-gateway = ["twilight-gateway"]
discord-model = ["twilight-model"]
logging = ["log", "log4rs"]
panicking = ["color-eyre", "owo-colors"]
