[package]
name = "bootstrap"
version = "0.7.1"
edition = "2021"
description = """
Bootstrap binary
"""
license = "AGPL-3.0-or-later"
rust-version = "1.77.0"

[dependencies]
clap = { version = "4.4.18", default-features = false, features = ["std", "usage", "help", "derive", "error-context"] }
fd-lock = "4.0.2"

[[bin]]
name = "bootstrap"
path = "src/bin/main.rs"
