[package]
name = "hartex_conftoml"
version = "1.27.0"
edition = "2021"
description = """
The `hartex_conftoml` library provides configuration serialization and deserialization capabilities.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
serde = { version = "1.0.132", features = [ "derive" ] }
toml = "0.5.8"

hartex_base = { path = "../base", features = [ "tracing-bundled" ] }

[dev-dependencies]
hartex_base = { path = "../base", features = [ "twilight-bundled" ] }
serde_test = { version = "1.0.132" }
