[package]
name = "hartex_database_queries"
version = "0.5.1"
edition = "2021"
description = """
Database queries generated for use in Rust code in HarTex.
"""
license = "AGPL-3.0-or-later"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.4.0"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
time = "0.3.30"
tokio-postgres = "0.7.10"
postgres-types = { version = "0.2.6", features = ["with-time-0_3"]}

[build-dependencies]
cornucopia = "0.9.0"
dotenvy = "0.15.7"
postgres = "0.19.7"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
