[package]
name = "hartex_dbmani"
version = "1.26.0"
edition = "2021"
description = """
The `hartex_dbmani` crate provides an interface to manipulate its PostgreSQL databases.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hartex_conftoml = { path = "../conftoml" }
hartex_base = { path = "../base", features = [ "tracing-bundled" ] }
hartex_env = { path = "../env" }
sqlx = { version = "0.5.9", default-features = false, features = [ "postgres", "runtime-tokio-native-tls" ] }
