[workspace]
members = [
    "hartex-discord-commands",
    "hartex-discord-commands-core",
    "hartex-discord-commands-macros",
    "hartex-discord-commands-test",
    "hartex-discord-core",
    "hartex-discord-entitycache-core",
    "hartex-discord-entitycache-entities",
    "hartex-discord-entitycache-macros",
    "hartex-discord-entitycache-test",
    "hartex-discord-eyre",
    "hartex-discord-leader",
    "hartex-discord-rest",
    "hartex-discord-worker",
]

[profile.release]
debug = true
