[workspace]
members = [
    "hartex-discord-commands",
    "hartex-discord-commands-core",
    "hartex-discord-commands-macros",
    "hartex-discord-commands-test",
    "hartex-discord-core",
    "hartex-discord-entitycache-cacheupdaters",
    "hartex-discord-entitycache-core",
    "hartex-discord-entitycache-entities",
    "hartex-discord-entitycache-macros",
    "hartex-discord-entitycache-repositories",
    "hartex-discord-entitycache-test",
    "hartex-discord-eyre",
    "hartex-discord-interaction-manager",
    "hartex-discord-leader",
    "hartex-discord-worker",
]

[profile.release]
debug = true
