[workspace]
members = [
    "hartex-discord-cdn",
    "hartex-discord-commands",
    "hartex-discord-commands-core",
    "hartex-discord-commands-macros",
    "hartex-discord-commands-manager",
    'hartex-discord-configuration-luart',
    "hartex-discord-core",
    "hartex-discord-entitycache-cacheupdaters",
    "hartex-discord-entitycache-core",
    "hartex-discord-entitycache-entities",
    "hartex-discord-entitycache-macros",
    "hartex-discord-entitycache-repositories",
    "hartex-discord-entitycache-test",
    "hartex-discord-leader",
    "hartex-discord-worker",
]

resolver = "2"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
