[package]
name = "env"
version = "1.28.0"
edition = "2021"
description = """
The environment variables for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
