[package]
name = "env"
version = "0.1.0"
edition = "2021"
description = """
The environment variables for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

[build-dependencies]
toml = "0.5.8"
