[package]
name = "event"
version = "0.1.0"
edition = "2021"
description = """
The event handler process for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", features = ["discord-model", "logging"] }
cache_discord = { path = "../cache/discord" }
env = { path = "../env" }
manidb = { path = "../manidb" }

async-std = { version = "1.10.0", features = ["unstable", "tokio1"] }
log = "0.4.14"
serde_json = "1.0.79"
tide = "0.17.0-beta.1"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"] }
