[package]
name = "event"
version = "0.1.0"
edition = "2021"
description = """
The event handler process for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", features = ["cmdline", "discord-model", "logging", "panicking"] }
cache_discord = { path = "../cache/discord" }
env = { path = "../env" }
loadbal = { path = "../loadbal" }
manidb = { path = "../manidb" }
rest = { path = "../rest" }

async-std = { version = "1.10.0", features = ["unstable", "tokio1"] }
hyper = { version = "0.14.17", features = ["client", "http1"], default-features = false }
log = "0.4.17"
serde_json = "1.0.80"
tide = "0.17.0-beta.1"
tokio = { version = "1.17.1", features = ["macros", "rt", "rt-multi-thread"] }
