[package]
name = "hartex_eventsys"
version = "1.26.0"
edition = "2021"
description = """
The `hartex_eventsys` library provides custom events as well as custom listeners for HarTex Discord bot.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
futures-channel = "0.3.19"
futures-util = "0.3.19"
hartex_model = { path = "../model" }
