[package]
name = "hartex_ext"
version = "1.27.0"
edition = "2021"
description = """
The `hartex_ext` crate provides useful extensions for various things in use by the codebase.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
hartex_base = { path = "../base", features = [ "twilight-bundled" ] }
