[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = """
The gateway process for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", features = ["logging", "panicking"] }

tokio = { version = "1.17.1", features = ["macros", "rt", "rt-multi-thread"] }
