[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = """
The gateway process for the bot.
"""
license = "AGPL-3.0-only"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base", features = ["cmdline", "discord-gateway", "logging", "panicking"] }
env = { path = "../env" }
ext = { path = "../ext", features = ["discord-model-ext"] }

async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = "0.3.21"
log = "0.4.17"
serde = "1.0.139"
serde_json = "1.0.82"
tide = "0.16.0"
tide-websockets = "0.4.0"

[[bin]]
name = "gateway"
path = "bin/main.rs"

[lib]
name = "gateway"
crate-type = ["rlib"]
path = "lib/lib.rs"
