[package]
name = "hartex_kafka"
version = "0.1.0"
edition = "2021"
description = """
Home-grown Kafka interface in Rust for use in HarTex.
"""
license = "AGPL-3.0-only"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0.4"

[features]
