[package]
name = "hartex"
version = "1.27.0"
edition = "2021"
description = """
This crate holds the entry point for HarTex Discord bot; it invokes the "main function" from the `hartex_driver` crate.
"""
license = "AGPL-3.0-only"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hartex_base = { path = "../base", features = [ "tracing-bundled" ] }
hartex_driver = { path = "../driver" }
tokio = { version = "1.14.0", features = [ "full" ] }
