[package]
name = "hartex_cmdsys"
version = "1.19.0"
edition = "2018"
description = """
This crate implements a command system for HarTex Discord bot, including a command parser as well as various utilities.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
