[package]
name = "hartex_cmdsys"
version = "1.19.0-21H2"
edition = "2018"
description = """
This crate implements a command system for HarTex Discord bot, including a command parser as well as various utilities.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
hartex_eventsys = { path = "../hartex_eventsys" }
hartex_utils = { path = "../hartex_utils" }
