[package]
name = "hartex_cmdsys"
version = "1.25.0"
edition = "2021"
description = """
This crate implements a command system for HarTex Discord bot, including a command parser as well as various utilities.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
hartex_eventsys = { path = "../hartex_eventsys" }
hartex_utils = { path = "../hartex_utils" }
