[package]
name = "hartex_confdsl"
version = "1.19.0"
edition = "2018"
description = """
The `hartex_confdsl` library contains an implementation of the HarTex Configuration DSL. It provides an interface
for parsing the DSL and returns usable Rust objects for various functionalities of the bot.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
