[package]
name = "hartex_conftoml"
version = "1.22.0"
edition = "2021"
description = """
The `hartex_conftoml` library provides configuration serialization and deserialization capabilities.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
hartex_core = { path = "../hartex_core", features = [ "tracing-bundled" ] }
serde = { version = "1.0.130", features = [ "derive" ] }
toml = "0.5.8"

[dev-dependencies]
hartex_core = { path = "../hartex_core", features = [ "twilight-bundled" ] }
serde_test = { version = "1.0.130" }