cargo-features = ["edition2021"]

[package]
name = "hartex_core"
version = "1.20.0-22H1"
edition = "2021"
description = """
The `hartex_core` library provides the core minimal functionality for the bot to function.

This library is supposed to be used in other `hartex_*` dependencies, but not use any of them.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
ctrlc = "3.1.9"
serde = "1.0.127"
toml = "0.5.8"
twilight-cache-inmemory = { version = "0.6.0", optional = true }
twilight-embed-builder = { version = "0.6.0", optional = true }
twilight-gateway = { version = "0.6.0", optional = true }
twilight-http = { version = "0.6.1", optional = true }
twilight-mention = { version = "0.6.0", optional = true }
twilight-model = { version = "0.6.0", optional = true }
twilight-standby = { version = "0.6.0", optional = true }
twilight-util = { version = "0.6.0", features = [ "snowflake" ], optional = true }

[features]
twilight-bundled = [ "twilight-cache-inmemory", "twilight-embed-builder", "twilight-gateway", "twilight-http", "twilight-mention", "twilight-model", "twilight-standby", "twilight-util" ]
