[package]
name = "hartex_core"
version = "1.24.0"
edition = "2021"
description = """
The `hartex_core` library provides the core minimal functionality for the bot to function.

This library is supposed to be used in other `hartex_*` dependencies, but not use any of them.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
ctrlc = "3.2.1"
serde = "1.0.131"
toml = "0.5.8"

tracing = { version = "0.1.29", optional = true }
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "time"], optional = true }

twilight-cache-inmemory = { version = "0.8.1", optional = true }
twilight-embed-builder = { version = "0.8.0", optional = true }
twilight-gateway = { version = "0.8.0", optional = true }
twilight-http = { version = "0.8.1", optional = true }
twilight-mention = { version = "0.8.0", optional = true }
twilight-model = { version = "0.8.1", optional = true }
twilight-standby = { version = "0.8.0", optional = true }
twilight-util = { version = "0.8.1", features = [ "builder", "snowflake" ], optional = true }

[features]
tracing-bundled = [ "tracing", "tracing-subscriber" ]
twilight-bundled = [ "twilight-cache-inmemory", "twilight-embed-builder", "twilight-gateway", "twilight-http", "twilight-mention", "twilight-model", "twilight-standby", "twilight-util" ]
