[package]
name = "hartex_env"
version = "1.25.0"
edition = "2021"
description = """
The `harttex-env` library various environments for different aspects of the HarTex Discord bot.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core", features = [ "tracing-bundled" ] }
