[package]
name = "hartex_locale"
version = "1.24.0"
edition = "2021"
description = """
The `hartex_locale` library provides translations for various locales (languages).
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
