cargo-features = ["edition2021"]

[package]
name = "hartex_logging"
version = "1.20.0"
edition = "2021"
description = """
The `hartex_logging` library provides logging functionality for HarTex Discord bot.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
