[package]
name = "hartex_model"
version = "1.22.0"
edition = "2021"
description = """
The `hartex_models` library provides various models for HarTex Discord bot, used for most of its functionalities.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
