[package]
name = "hartex_plugin_localize"
version = "1.25.0"
edition = "2021"
description = """
The `hartex_plugin_localize` library implements helper structures to reduce code
messiness in `hartex_plugins`.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
hartex_conftoml = { path = "../hartex_conftoml" }
hartex_locale = { path = "../hartex_locale" }
