[package]
name = "hartex_plugins"
version = "1.21.0"
edition = "2021"
description = """
The `hartex_plugins` library implements various bot plugins for its functionalities.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_cmdsys = { path = "../hartex_cmdsys" }
hartex_conftoml = { path = "../hartex_conftoml" }
hartex_core = { path = "../hartex_core", features = [ "twilight-bundled" ] }
hartex_dbmani = { path = "../hartex_dbmani" }
hartex_utils = { path = "../hartex_utils" }
