[package]
name = "hartex_plugins"
version = "1.24.0"
edition = "2021"
description = """
The `hartex_plugins` library implements various bot plugins for its functionalities.
"""
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_cmdsys = { path = "../hartex_cmdsys" }
hartex_conftoml = { path = "../hartex_conftoml" }
hartex_core = { path = "../hartex_core", features = [ "twilight-bundled" ] }
hartex_dbmani = { path = "../hartex_dbmani" }
hartex_env = { path = "../hartex_env" }
hartex_utils = { path = "../hartex_utils" }
tokio = { version = "1.14.0", features = [ "full" ] }
