[package]
name = "hartex_utils"
version = "1.19.0-21H2"
edition = "2018"
description = """
The `hartex_utils` library provides several utilies for the HarTex Discord bot.
"""
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hartex_core = { path = "../hartex_core" }
